--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client-portal-react-ts",
+  "homepage": "https://lighter.host/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
